apps/architecture-portal/versioned_docs/version-1.0.51.0/core/modules/project-io.mdx
---
title: Project I/O
area: core
status: implemented
owners: [core]
module: project-io
source_paths: [packages/project-io, tests/core/project_io]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {DiagramFrame} from '@site/src/components/DiagramFrame';

<BuildIdentity kind="modules" id="project-io" />

<DiagramFrame title="Project I/O Module" diagramId="project-io" />

## 1. 目的与非职责
事务式保存/加载 Project Truth、导入/导出 portable Project Bundle，并维护 Sequence journal overlay、flush receipt 与 recovery artifact；不 Cook、渲染或拥有 Host UI。
## 2. 当前实现状态
Project I/O 的 Store、Sequence Journal、streaming Bundle parser/packer、旧 Contract 读取与当前 Contract 写出、Sound Set Store、Catalog transport 与缓存、Workspace Cache 和 crash-safe publication 已实现。`persisted_projection` 写出 v5；v1/v2/v3/v4 读取保留原有迁移纪律，打开本身不回写。Bundle envelope 及 native/Python reader 同步接受 v5，并继续接受旧 envelope 版本。v4 上的旧 Lineage 在下一次持久化原样保留，capability_adoption 必须属于 v5。完整 Slice lineage 随 Asset 进入 checkpoint 和事务 payload；同一内部 command ID 的 replay 比较原始完整 payload，任一证据变化拒绝 collision，重开后保留分析源 revision 和独立物化 Artifact 身份。Workspace Job 状态、terminal 文件与候选生命周期不混入 Project。journal 现在是 session-kind aware：`SessionKind::sequence` 与 `SessionKind::performance` 分别标注 active journal 与 flush record，`ActivePerformanceJournal` 独立承载 performance fingerprint、flush 序列、pending events、rebase 记录、transient checkpoint 与最后一次 launch acknowledgement。Performance 侧另有独立于 Sequence 的 draft 生命周期：`begin_performance_draft` 在 journal 自身的锁内以 begin/complete 两段方式登记草稿，`save_performance_draft`/`discard_performance_draft` 结束草稿，`stop_performance_session`、`apply_performance_recovery`/`discard_performance_recovery` 与 `bind_performance_recording` 各自返回带 identity 的 receipt，owner loss 通过 `preview_performance_owner_loss` 先给出 transient closure 预览再 seal。flush 以 manifest replacement 为 commit point，并把 command/session/flush identity 与 committed revision 写入可幂等重放的 receipt；同一 `command_id` 的 replay/collision 始终比较不可变 original canonical payload，相同 append 返回原 record，冲突 payload 在写入前失败。completion 只更新独立 effective recovery residual，不能改写 command identity；sealed payload v2 同时要求两者，旧 recovery-only snapshot 按旧语义安全读取。当前 source 在每个已接受 Sequence Pad event acknowledgement 前 append 单调、checksummed canonical tail；flush record 消费同一 tail。若较早 flush 在 commit point 前失败，后续 flush 必须 canonical 覆盖全部 unresolved batch 与最新 tail。任一 receipt 可见时，Project I/O 按同 session/pattern/expected-revision 的 canonical key/value coverage 双向 resolve：较晚 completion supersede 被覆盖的较早 batch；较早 completion resolve 精确等价的已耐久 retry，并从非等价较晚 batch 及当时最新 durable pending tail 扣除精确 committed event、保留新增或同-key 新值 residual。即使没有较晚 flush，owner loss 也只 seal 真正未提交部分；tail 的单调 sequence metadata 与 canonical 顺序不被过滤重置。所有普通 authoring mutation 仍在持有 writer lease 后重读 active Sequence Journal；存在 active journal 时只有 `UpdateSequenceSettings` 属于既有白名单，其成功提交由 Store 同步 rebase journal。
## 3. 所有权与依赖
依赖 Foundation 与 Authoring Domain；平台适配不能改变领域语义。
## 4. 架构与数据流
Facade 提交 Project、Bundle stream、bounded Sample bytes 或 Sequence flush；Project I/O 在 writer lease 下验证 journal overlay 和 authoring admission，原子发布当前 Project revision，再完成 receipt。Store 只暴露已提交 Project Truth；未提交 overlay、owner-loss recovery artifact、waveform cache 与不可变 Runtime Snapshot 生命周期彼此独立。active journal 的拒绝错误携带 session identity 和 stop-or-reconcile remedy，不允许调用者从无锁内存观察推断 authority。
## 5. API 与 Artifact 边界
只持久化 Project Truth 与原始 WAV Artifact；`lmdj.project-bundle.v1` 只定义 transfer envelope；Workspace waveform cache 可丢弃重建，Runtime Snapshot 明确禁止持久化为创作真相。
## 6. 状态、错误与生命周期
故障矩阵验证验证、取消、超时与发布中断恢复；typed error 区分输入、平台、busy 与提交失败。
## 7. 产品使用方
Application Facade 使用；Host 不直接解析 bundle。
## 8. 测试与证据
Project store、v1/v2/v3/v4→v5 migration、atomic Sample transaction、Sequence journal/receipt/recovery、durable tail reload/flush consumption、失败 F1 被成功累积 F2 supersede、F0 先完成时 32 条等价 retry inverse resolve、original A+B replay 与 residual-only collision、versioned serialize/reload/legacy recovery、post-commit same-bundle retry/restart reconcile、无 later flush 的 A+B/A+A'+B/equivalent-only pending-tail residual、非等价 flush residual 提取、torn/checksum/sequence/canonical corruption 的统一 fail-closed evidence、writer-lease 内 direct-authoring refusal/settings rebase、Bundle 1.0/1.1 round trip/publication、fault matrix、distinct-platform publication ownership、Native link-count 与 Web/native storage platform contract 测试；`performance_journal_test.cpp`、`performance_lifecycle_test.cpp`、`performance_rebase_test.cpp` 与 `session_mutual_exclusion_test.cpp` 覆盖 performance session kind、draft 生命周期、rebase 记录与会话互斥。
## 9. 限制与下一门禁
云同步和协同冲突策略未批准，不能从本地存储能力推断。持久化正确性由自动化证明，不构成任何设备、听感或物理演奏验收。
## 10. 版本身份
版本和依赖由 `module.json`/Assembly Lock 派生。

## Verified Asset owner read

`ProjectStore::read_asset_artifact` 接受 Project 路径、Project ID、Asset ID 和完整
ArtifactRef。在一个 writer lease 内检查元数据所有权、完整引用以及选中音频的 SHA-256
和 byte length，返回独立字节副本；不扫描无关音频，不调用 recovery 或 staging 清理。
错误身份在读取 Artifact 前拒绝；缺失文件与内容不匹配可区分，后者使用显式 storage
condition，由 Facade 归一化为 `IO_ERROR/input_artifact_mismatch`。
既有普通 Project load 仍校验全部 Asset 字节。Host 不直接调用这一存储 API。

`ProjectStore::inspect_committed` 在 owner lease 内返回已提交的 Project 状态，
不执行 authoring recovery 或清理未发布文件。Candidate 分析使用这个入口取得
Project/Asset/revision 绑定，再通过上述 verified owner read 获取音频；成功或拒绝
都保留中断创作留下的文件，由显式 authoring load 负责处理。
